tests/dfrouter/errors/detector_files/broken_detectors_file1d/errors.dfrouter
Error: Attribute 'pos' in definition of detectorDefinition 'MQ11Fs2' is not of type double.
Error: Process Error
Quitting (on error).
